# multi-agent

./: .env.example  .gitignore  README.md  pyproject.toml
diagrams/: .$Untitled Diagram.drawio.bkp  .$agents.drawio.bkp  .$command.drawio.bkp  .$cot.drawio.bkp  .$debate.drawio.bkp  .$flow.drawio.bkp  .$flow_chart.drawio.bkp  .$intergroup.drawio.bkp  .$intergroup.drawio.dtmp  .$intragroup.drawio.bkp  .$news.drawio.bkp  .$parallel.drawio.bkp  .$pipeline.drawio.bkp  .$prediction.drawio.bkp  .$training.drawio.bkp  agents.drawio  alpha.drawio  command.drawio  cot.drawio  debate.drawio  explanation.drawio  flow.drawio  flow_chart.drawio  intergroup.drawio  intragroup.drawio  news.drawio  parallel.drawio  pipeline.drawio  prediction.drawio  record.drawio  share.drawio  training.drawio  trend.drawio
environ/: agent.py  constants.py  data_loader.py  env.py  env_datahander.py  env_portfolio.py  evaluator.py  exhibits.py  explanation.py  instructions.py  prompt_generator.py  prompts.py  settings.py  tabulate.py  utils.py  visualization.py
environ/fetch/: coingecko.py  cryptocompare.py
environ/fine_tuning/: agents.py
environ/process/: agent.py  common_factors.py  prompt.py  (+6 more)
scripts/: ap.py  benchmark.py  fine_tuning.py  fine_tuning_dataset.py  langgraph_nodes_edges.py  lc.py  nasdaq.py  openai_test.py  pdf.py  python.py  run.py  sp.py  sql.py
tables/: ablation.tex  ap_bench.tex  asset_pricing.tex  metrics.tex  mkt_ap.tex  portfolio.tex
test/: annotation.py  conditional_formatting.py  mcap_plot.py  single_cs_0510.jsonl  single_mkt_0510.jsonl  test.jsonl  train_change.py
(+55 files in other folders)
