[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "environ"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9.15"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy==1.24.2", 
  "pandas==1.5.3", 
  "matplotlib==3.6.3", 
  "requests==2.31.0", 
  "openai==1.25.0",
  "tenacity==8.3.0",
  "langchain_community==0.3.11",
  "scikit-learn==1.6.0",
]

[project.optional-dependencies]
dev = ["pylint", "black", "pytest"]

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         
    | \.git          
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py       
)
'''